--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,29 @@
-h1 {
-  color: red;
+@import url('https://fonts.googleapis.com/css?family=Courgette|Open+Sans&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+.body-background {
+  background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../images/home.jpg') no-repeat center center/cover;
+  width: 100%;
+  height: 91.5vh;
+}
+
+.body-background h1 {
+  font-family: Courgette;
+  color: #fff;
+}
+
+/* Home button */
+.btn-home {
+  background: #a6f78d;
+  border-color: #a6f78d;
+  color: crimson;
+  font-weight:bolder;
+}
+
+/*************************/
+.flex-content {
+  height: 91vh;
 }
