Added more styling to the app

--- a/neighborhoods/templates/neighbourhoods.html
+++ b/neighborhoods/templates/neighbourhoods.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+<div class="body-container">
 <div class="container-fluid">
 
   <div class="row">
     {% for hood in all_hoods %}
-    <div class="col-md-4">
-      <div class="card mb-4" style="min-height:340px">
+    <div class="col-md-4 p-4">
+      <div class="card my-4 p-4" style="min-height:340px">
         <h5 class="card-title">{{ hood.name }} ({{hood.location}}) <span class="ml-4">{{hood.members.count}}
           member{{hood.members.count|pluralize}}</span></h5>
         <img src="{{ hood.neighbourhood_logo.url }}" class="card-img-top" alt="{{ hood.name }}" height="180px">
@@ -28,12 +29,6 @@
   </div>
     <a href="{% url 'new-hood' %}" class="btn btn-sm btn-info mb-2" style="text-align: center"> New Neighbourhood</a>
 </div>
+</div>
 
-<style>
-    body{
-      background-image: url('/static/images/index2.jpg');
-      background-repeat:no-repeat;
-      background-size: cover;
-    }
-  </style>
 {% endblock %}
