--- a/neighborhoods/templates/registration/login.html
+++ b/neighborhoods/templates/registration/login.html
@@ -6,6 +6,7 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
+            <h3 class="welcome py-3 text-center">Log in and join your hood</h3>
             <form action="" method="POST" novalidate>
                 {% csrf_token %}
                 {{ form|crispy }}
