--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,10 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: 'Open Sans';
+}
 .body-background {
   background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../images/home.jpg') no-repeat center center/cover;
   width: 100%;
@@ -31,4 +35,14 @@
 nav a {
   color: crimson;
   font-weight: bolder;
+}
+
+.welcome {
+  color: crimson;
+  font-family:Courgette;
+}
+
+.body-container {
+  background: #a6f78d;
+  height: 91vh;
 }
